syntax = "proto3";

package auth;

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc Validate (ValidateRequest) returns (ValidateResponse) {}
    rpc GetProfile (GetProfileRequest) returns (GetProfileResponse) {}
    rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse) {}
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int32 status = 1;
    repeated string error = 2;
    string accessToken = 3;
    UserData userData = 4;
   
}

message UserData {
    string id = 1;
    string email = 2;
    string name = 3;
    string role = 4;
}

message GetUsersRequest {}

message GetUsersResponse {
    repeated UserData users = 1;
}


message RegisterRequest {
  string workId = 1;        // e.g., "EMP001"
  string name = 2;          // e.g., "John Doe"
  string email = 3;
  string workLocation = 4;  // e.g., "New York"
  string role = 5;          // User role
  string password = 6;
  string timezone = 7;      // e.g., "America/New_York"
  string department_id = 8; // UUID FK to departments.id (preferred)
  string department = 9;    // optional backward compat: department name
  string deptManager = 10;  // deprecated
  string birthday = 11;     // e.g., "1990-01-15"
}

message RegisterResponse {
  int32 status = 1;
  repeated string error = 2;
  string email = 3;         // Returned to pre-fill the Login page
}
message ValidateRequest {
    string token = 1;
}
message ValidateResponse { 
    bool valid = 1;
    UserData user = 2;
}

message GetProfileRequest {
    string userId = 1;
}

message GetProfileResponse {
    int32 status = 1;
    repeated string error = 2;
    UserProfile profile = 3;
}

message UserProfile {
    string id = 1;
    string workId = 2;
    string name = 3;
    string email = 4;
    string workLocation = 5;
    string role = 6;
    string timezone = 7;
    string department_id = 8;
    string department = 9;   // department name from join
    string birthday = 10;
    string dateJoined = 11;
    optional string status = 12;
    optional string position = 13;
    optional string hireDate = 14;
    optional string managerId = 15;
    optional int32 hierarchyLevel = 16;
    optional string phone = 17;
    optional string address = 18;
    optional string city = 19;
    optional string country = 20;
    optional string emergencyContactName = 21;
    optional string emergencyContactPhone = 22;
    optional string emergencyContactRelationship = 23;
    optional string baseSalary = 24;
}

message UpdateProfileRequest {
    string userId = 1;
    optional string name = 2;
    optional string email = 3;
    optional string workLocation = 4;
    optional string role = 5;
    optional string timezone = 6;
    optional string department_id = 7;
    optional string birthday = 8;
    optional string password = 9;
    optional string status = 10;
    optional string position = 11;
    optional string hireDate = 12;
    optional string managerId = 13;
    optional int32 hierarchyLevel = 14;
    optional string phone = 15;
    optional string address = 16;
    optional string city = 17;
    optional string country = 18;
    optional string emergencyContactName = 19;
    optional string emergencyContactPhone = 20;
    optional string emergencyContactRelationship = 21;
    optional string baseSalary = 22;
    optional string workId = 23;
}

message UpdateProfileResponse {
    int32 status = 1;
    repeated string error = 2;
    UserProfile profile = 3;
}

message DeleteUserRequest {
    string userId = 1;
}

message DeleteUserResponse {
    bool success = 1;
    string error = 2;  // set when success is false
}

// ============================================
// ACCOUNTS DEPARTMENT CRUD
// ============================================
service DepartmentService {
    rpc GetDepartment (GetDepartmentRequest) returns (DepartmentResponse) {}
    rpc GetDepartments (GetDepartmentsRequest) returns (DepartmentsResponse) {}
    rpc CreateDepartment (CreateDepartmentRequest) returns (DepartmentResponse) {}
    rpc UpdateDepartment (UpdateDepartmentRequest) returns (DepartmentResponse) {}
    rpc DeleteDepartment (DeleteDepartmentRequest) returns (DeleteDepartmentResponse) {}
}

message GetDepartmentRequest {
    string id = 1;
}

message GetDepartmentsRequest {}

message CreateDepartmentRequest {
    string deptName = 1;
    string deptManagerId = 2;  // optional, UUID of user
}

message UpdateDepartmentRequest {
    string id = 1;
    optional string deptName = 2;
    optional string deptManagerId = 3;
}

message DeleteDepartmentRequest {
    string id = 1;
}

message DepartmentResponse {
    string id = 1;
    string deptName = 2;
    string deptManagerId = 3;
}

message DepartmentsResponse {
    repeated DepartmentResponse departments = 1;
}

message DeleteDepartmentResponse {
    bool success = 1;
    string message = 2;
}